one more gif, refactored gif names

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.gal
 !sk8border_logo.png
 !sk8border.p8.png
-!sk8border.p8_0.gif
-!sk8border.p8_3.gif
-!sk8border.p8_10.gif
+!sk8border_screenshot_1.gif
+!sk8border_screenshot_2.gif
+!sk8border_screenshot_3.gif
+!sk8border_screenshot_4.gif
