--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
-    "mustache": "^3.0.1"
+    "autoprefixer": "^9.6.0",
+    "cssnano": "^4.1.10",
+    "mustache": "^3.0.1",
+    "postcss": "^7.0.17"
   },
   "scripts": {
     "build": "node web_build.js"
-  }
+  },
+  "browserslist": ["> 0.1%"]
 }
